# python_piscine_0

ex00/: Hello.py
ex01/: format_ft_time.py
ex02/: find_ft_type.py  tester.py
ex03/: NULL_not_found.py  tester.py
ex04/: whatis.py
ex05/: building.py
ex06/: filterstring.py  ft_filter.py
ex07/: sos.py
ex08/: Loading.py  tester.py
ex09/: LICENSE  PACKAGING.md  PACKAGING.txt  README.md  pyproject.toml  requirements.txt  tester.py
ex09/src/ft_package/: __init__.py  count_in_list.py
